--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,24 +19,15 @@
 			</div>
 			<!-- Show the "visited" products -->
 			<% productsVisited.forEach(({id,name,price,image,discount}) => { %>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products/detail/¿?">
-						<figure class="product-box_image">
-							<img src="/images/products/<%= image %>" alt="imagen de producto">
-						</figure>
-						<article class="product-box_data">
-							<h2>$<%= toThousand(price - (price * discount / 100)) %> </h2>
-							<% if (discount > 0) { %>
-								<span><%= discount %>% OFF</span>
-							<% } %>
-							<p><%= name %></p>
-							<i class="fas fa-truck"></i>
-						</article>
-					</a>
-				</section>
-			</div>
-			<% }) %> 
+				<%- include('./partials/product', {
+					id,
+					name,
+					price,
+					image,
+					discount,
+					toThousand
+				}) %> 
+			<% }) %>
 		</div>
 	</div>
 	<!-- /ultima visita -->
@@ -48,25 +39,16 @@
 				<h2 class="products-title">Ofertas</h2>
 			</div>
 			<!-- Show the "in-sale" products -->
-			<% productsVisited.forEach(({id,name,price,image,discount}) => { %>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="/products/detail/¿?">
-							<figure class="product-box_image">
-								<img src="/images/products/<%= image %>" alt="imagen de producto">
-							</figure>
-							<article class="product-box_data">
-								<h2>$<%= toThousand(price - (price * discount / 100)) %> </h2>
-								<% if (discount > 0) { %>
-									<span><%= discount %>% OFF</span>
-								<% } %>
-								<p><%= name %></p>
-								<i class="fas fa-truck"></i>
-							</article>
-						</a>
-					</section>
-				</div>
-			<% }) %> 
+			<% productsInSale.forEach(({id,name,price,image,discount}) => { %>
+				<%- include('./partials/product', {
+					id,
+					name,
+					price,
+					image,
+					discount,
+					toThousand
+				}) %> 
+			<% }) %>
 		</div>
 	</div>
 	<!-- /Ofertas -->
