--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -14,21 +14,16 @@
 				<h2 class="products-title">Todos los productos</h2>
 			</div>
 		
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products/detail/¿?">
-						<figure class="product-box_image">
-							<img src="/images/products/¿?" alt="imagen de producto">
-						</figure>
-						<article class="product-box_data">
-							<h2>$FINAL PRICE/h2>
-							<span>DISCOUNT% OFF</span>
-							<p>PRODUCT NAMe</p>
-							<i class="fas fa-truck"></i>
-						</article>
-					</a>
-				</section>
-			</div>
+			<% products.forEach(({id,name,price,image,discount}) => { %>
+				<%- include('./partials/product', {
+					id,
+					name,
+					price,
+					image,
+					discount,
+					toThousand
+				}) %> 
+			<% }) %>
 		
 		</div>
 	</div>
